error if a metric is written wrong

--- a/packages/Quality/widgets/SonarQube/SonarQube.styl
+++ b/packages/Quality/widgets/SonarQube/SonarQube.styl
@@ -14,6 +14,10 @@
 		display inline-block
 		padding-right 1%
 
+		.error
+			font-size 1em
+			color $error-color
+
 		.item-container
 
 
@@ -39,6 +43,10 @@
 		font-size 1em
 		display inline-block
 		padding-top 3.5em
+
+		.error
+			font-size 1em
+			color $error-color
 
 		.item-container
 
