get informations from Jira

--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -1,3 +1,75 @@
 .content
-  font-size 3em
-  color $gray-light
+	font-size 1em
+	color $gray-light
+
+
+	.project
+		font-size 1.25em
+
+		.name
+			padding-right 10em
+			color $gray-light
+			font-size 1em
+
+			.figures
+				font-size .5em
+				
+
+		.version
+			font-size 1em
+			float right
+			padding-left 10em
+
+	.IssueNumber
+		text-align right
+		border-width 5em
+
+		.libele
+			font-weight bold
+			margin-bottom 5em
+
+		.figure
+			color #0066FF
+			font-weight bold
+
+	.IssuesStat
+		border 1px
+		background-color #282828
+
+		.Priorities
+			font-size 1em
+
+			.libele
+				margin-left 1em
+
+			.figure
+				color #0066FF
+				float right
+				margin-right 10em
+		.Status
+			font-size 1em
+
+			.libele
+				margin-left 1em
+
+			.figure
+				color #0066FF
+				float right
+				margin-right 5em
+
+	.IssuesList
+		overflow overlay
+		color $gray-lighter
+
+		.major
+			background-color #282828
+
+		.second
+			background-color #282828
+
+		.undefined
+			background-color $brand-primary
+
+			.name
+				color #0000FF
+
