--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -3,6 +3,7 @@
 	color $gray-light
 
 
+
 	.project
 		font-size 1.25em
 
@@ -10,6 +11,7 @@
 			padding-right 10em
 			color $gray-light
 			font-size 1em
+			border-style none
 
 			.figures
 				font-size .5em
@@ -57,19 +59,76 @@
 				float right
 				margin-right 5em
 
-	.IssuesList
-		overflow overlay
-		color $gray-lighter
 
-		.major
-			background-color #282828
 
-		.second
-			background-color #282828
+.major
+	background-color #ff848a
+	border-width 1px
+	margin 1em
+	padding 0.5em
+	
 
-		.undefined
-			background-color $brand-primary
 
-			.name
-				color #0000FF
+.second
+	background-color #a3ffc4
+	border-width 1px
+	margin 1em
+	padding 0.5em
+	
 
+.undefined
+	background-color #a3c6ff
+	border-width 1px
+	margin 1em
+	padding 0.5em
+
+
+.IssuesList
+	margin-top 1em
+	border-style solid
+	color #000000
+	font-size 0.85em
+	overflow auto
+
+	
+
+.status
+	border-style solid
+	border-color $gray-light
+	border-width 0.5px
+	padding 0.5em
+
+.title
+	text-align center
+	border-style solid
+	border-color $gray-light
+	border-width 0.5px
+
+.priority
+	text-align center
+	border-style solid
+	border-color $gray-light
+	border-width 0.5px
+	padding 0.25em
+
+.type
+	text-align center
+	border-style solid
+	border-color $gray-light
+	border-width 0.5px
+	padding 0.5em
+
+.titre
+	background-color $gray
+
+a:link
+	color black
+	text-decoration none
+
+a:visited
+	color black
+	text-decoration none
+
+a:hover
+	color $gray-darker
+	font-weight bold
