scroll bar on the Jira widget

--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -1,6 +1,11 @@
+.html
+	overflow overlay
+
 .content
 	font-size 1em
 	color $gray-light
+	max-height 29em
+	overflow auto
 
 
 
@@ -62,7 +67,7 @@
 
 
 .major
-	background-color #ff848a
+	background-color #ff848a//Red
 	border-width 1px
 	margin 1em
 	padding 0.5em
@@ -70,14 +75,14 @@
 
 
 .second
-	background-color #a3ffc4
+	background-color #a3ffc4//Green
 	border-width 1px
 	margin 1em
 	padding 0.5em
 	
 
 .undefined
-	background-color #a3c6ff
+	background-color #a3c6ff//Blue
 	border-width 1px
 	margin 1em
 	padding 0.5em
@@ -89,6 +94,7 @@
 	color #000000
 	font-size 0.85em
 	overflow auto
+	max-height 6em
 
 	
 
