add link on the Jira statistics part

--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -46,18 +46,27 @@
 		.Priorities
 			font-size 1em
 
+
+
 			.libele
 				margin-left 1em
+				color $gray-light
+
+				a:hover
+					color white
 
 			.figure
 				color #0066FF
 				float right
 				margin-right 10em
+
+
 		.Status
 			font-size 1em
 
 			.libele
 				margin-left 1em
+				color $gray-light
 
 			.figure
 				color #0066FF
@@ -138,3 +147,10 @@ a:visited
 a:hover
 	color $gray-darker
 	font-weight bold
+
+.error
+	color white
+	background-color $error-color
+	font-size 1.5em
+	padding 1em
+
