--- a/themes/default/variables.styl
+++ b/themes/default/variables.styl
@@ -34,6 +34,7 @@
 //$success-color = $brand-success
 //
 //$background-color = #205081
+$background-image = url('../../assets/images/nuages')
 //
 //$widget-background-color = #ebf2f9
 //$widget-padding = $gutter-size
