work on css : widget size and global theme

--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -7,10 +7,13 @@
 	max-height 29em
 	overflow auto
 
+	.table
+		width 100%
 
 
 	.project
 		font-size 1.25em
+		width 100%
 
 		.name
 			padding-right 10em
@@ -41,7 +44,7 @@
 
 	.IssuesStat
 		border 1px
-		background-color #282828
+		background-color $background-color
 
 		.Priorities
 			font-size 1em
@@ -134,7 +137,7 @@
 	padding 0.5em
 
 .titre
-	background-color $gray
+	background-color $gray-lighter-plus
 
 a:link
 	color black
