--- a/themes/foundation/variables.styl
+++ b/themes/foundation/variables.styl
@@ -19,7 +19,7 @@ $error-color = $brand-danger
 $success-color = $brand-success
 
 $background-color = #b6f9f8
-$background-image = none
+$background-image ={ url('../../assets/images/nuages')}
 
 $dashboard-title-color = $gray
 
