--- a/themes/default/variables.styl
+++ b/themes/default/variables.styl
@@ -18,12 +18,13 @@
 //
 //$body-padding = 0
 //
-//$gray-base = #181818;
-//$gray-darker = lighten($gray-base, 5%);
-//$gray-dark = lighten($gray-base, 20%);
-//$gray = #707070;
-//$gray-light = lighten($gray, 30%);
-//$gray-lighter = lighten($gray-base, 70%);
+$gray-base = #474646;
+$gray-darker = lighten($gray-base, 5%);
+$gray-dark = lighten($gray-base, 20%);
+$gray = #474646;
+$gray-light = lighten($gray, 30%);
+$gray-lighter = lighten($gray-base, 40%);
+$gray-lighter-plus = lighten($gray-base, 70%);
 //
 //$brand-primary = #205081
 //$brand-success = #1C842F // green
@@ -33,10 +34,9 @@
 //$error-color = $brand-danger
 //$success-color = $brand-success
 //
-//$background-color = #205081
-$background-image = url('../../assets/images/nuages')
+$background-color = #FFECD0
 //
-//$widget-background-color = #ebf2f9
+$widget-background-color = #FFE0B3
 //$widget-padding = $gutter-size
 //$widget-container-padding = 0
 //$widget-content-padding = 0
@@ -50,5 +50,3 @@ $background-image = url('../../assets/images/nuages')
 //
 //$widget-body-text-color = $gray
 //$dashboard-title-color = $gray
-
-
