figures color in jira widget

--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -39,7 +39,7 @@
 			margin-bottom 5em
 
 		.figure
-			color #0066FF
+			color $brand-primary
 			font-weight bold
 
 	.IssuesStat
@@ -59,7 +59,7 @@
 					color white
 
 			.figure
-				color #0066FF
+				color $brand-primary
 				float right
 				margin-right 10em
 
@@ -72,7 +72,7 @@
 				color $gray-light
 
 			.figure
-				color #0066FF
+				color $brand-primary
 				float right
 				margin-right 5em
 
