--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -109,6 +109,13 @@
 	max-height 6em
 
 	
+.id
+	border-style solid
+	border-color $gray-light
+	border-width 0.5px
+	padding 0.5em
+	font-size 0.85em
+
 
 .status
 	border-style solid
