add version in the jira widget

--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -117,6 +117,13 @@
 	font-size 0.85em
 	text-align center
 
+.version
+	border-style solid
+	border-color $gray-light
+	border-width 0.5px
+	padding 0.5em
+	font-size 0.85em
+	text-align center
 
 .status
 	border-style solid
