new white and gray style

--- a/themes/default/variables.styl
+++ b/themes/default/variables.styl
@@ -18,10 +18,10 @@
 //
 //$body-padding = 0
 //
-$gray-base = #474646;
+$gray-base = #FFFFFF;
 $gray-darker = lighten($gray-base, 5%);
 $gray-dark = lighten($gray-base, 20%);
-$gray = #474646;
+$gray = #FFFFFF;
 $gray-light = lighten($gray, 30%);
 $gray-lighter = lighten($gray-base, 40%);
 $gray-lighter-plus = lighten($gray-base, 70%);
@@ -34,9 +34,9 @@ $gray-lighter-plus = lighten($gray-base, 70%);
 //$error-color = $brand-danger
 //$success-color = $brand-success
 //
-$background-color = #FFECD0
+$background-color = #FFF8F8
 //
-$widget-background-color = #FFE0B3
+$widget-background-color = #938E8E
 //$widget-padding = $gutter-size
 //$widget-container-padding = 0
 //$widget-content-padding = 0
