--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -44,7 +44,7 @@
 
 	.IssuesStat
 		border 1px
-		background-color $background-color
+		background-color #7A7A7A
 
 		.Priorities
 			font-size 1em
@@ -111,7 +111,7 @@
 	
 .id
 	border-style solid
-	border-color $gray-light
+	border-color #7A7A7A
 	border-width 0.5px
 	padding 0.5em
 	font-size 0.85em
@@ -119,7 +119,7 @@
 
 .version
 	border-style solid
-	border-color $gray-light
+	border-color #7A7A7A
 	border-width 0.5px
 	padding 0.5em
 	font-size 0.85em
@@ -127,27 +127,27 @@
 
 .status
 	border-style solid
-	border-color $gray-light
+	border-color #7A7A7A
 	border-width 0.5px
 	padding 0.5em
 
 .title
 	text-align center
 	border-style solid
-	border-color $gray-light
+	border-color #7A7A7A
 	border-width 0.5px
 
 .priority
 	text-align center
 	border-style solid
-	border-color $gray-light
+	border-color #7A7A7A
 	border-width 0.5px
 	padding 0.25em
 
 .type
 	text-align center
 	border-style solid
-	border-color $gray-light
+	border-color #7A7A7A
 	border-width 0.5px
 	padding 0.5em
 
