--- a/themes/default/variables.styl
+++ b/themes/default/variables.styl
@@ -18,10 +18,10 @@
 //
 //$body-padding = 0
 //
-$gray-base = #FFFFFF;
+$gray-base = #000000;
 $gray-darker = lighten($gray-base, 5%);
 $gray-dark = lighten($gray-base, 20%);
-$gray = #FFFFFF;
+$gray = #000000;
 $gray-light = lighten($gray, 30%);
 $gray-lighter = lighten($gray-base, 40%);
 $gray-lighter-plus = lighten($gray-base, 70%);
@@ -34,9 +34,9 @@ $gray-lighter-plus = lighten($gray-base, 70%);
 //$error-color = $brand-danger
 //$success-color = $brand-success
 //
-$background-color = #FFF8F8
+$background-color = #F2F2F2
 //
-$widget-background-color = #938E8E
+$widget-background-color = #D9D9D9
 //$widget-padding = $gutter-size
 //$widget-container-padding = 0
 //$widget-content-padding = 0
