Jenkins widget error correction

--- a/packages/Quality/widgets/Jenkins/Jenkins.styl
+++ b/packages/Quality/widgets/Jenkins/Jenkins.styl
@@ -1,3 +1,11 @@
 .content
-  font-size 3em
+  font-size 1em
   color $gray-light
+
+  .job
+  	font-size 1.5em
+  	background-color $background-color
+  	border-radius 30px
+
+  	.name
+  		text-align center
