Jenkins widget css

--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -1,5 +1,5 @@
 .html
-	overflow overlay
+	overflow auto
 
 .content
 	font-size 1em
@@ -45,11 +45,10 @@
 	.IssuesStat
 		border 1px
 		background-color $background-color
+		border-radius 30px
 
 		.Priorities
 			font-size 1em
-
-
 
 			.libele
 				margin-left 1em
