--- a/packages/Quality/widgets/Jenkins/Jenkins.styl
+++ b/packages/Quality/widgets/Jenkins/Jenkins.styl
@@ -1,11 +1,42 @@
 .content
   font-size 1em
   color $gray-light
+  overflow auto
+  max-height 22em
 
   .job
+  	padding 1%
   	font-size 1.5em
   	background-color $background-color
   	border-radius 30px
+  	margin 1em
 
   	.name
   		text-align center
+  		color $gray-dark
+  		font-weight bold
+
+  	.figure
+  		color $brand-primary
+  		padding-right 3em
+  		font-weight bold
+
+  	.SUCCESS
+  		padding-right 2em
+  		font-weight bold 
+  		color $brand-success
+		 		
+  	.FAILURE
+  		color $brand-danger
+  		padding-right 2em
+  		font-weight bold
+
+
+  	.blue
+  		color blue
+
+  	.red
+  		color red
+
+  	.title
+  		padding-right 8em
