jenkins widget : no build found exception

--- a/packages/Quality/widgets/Jenkins/Jenkins.styl
+++ b/packages/Quality/widgets/Jenkins/Jenkins.styl
@@ -40,3 +40,21 @@
 
   	.title
   		padding-right 8em
+
+
+.error
+	text-align: center
+	color: $brand-danger
+	font-weight: bold
+
+a:link
+	color $gray
+	text-decoration none
+
+a:visited
+	color black
+	text-decoration none
+
+a:hover
+	color $gray-light
+	font-weight bold
