--- a/packages/Quality/widgets/Jenkins/Jenkins.styl
+++ b/packages/Quality/widgets/Jenkins/Jenkins.styl
@@ -42,6 +42,16 @@
   		padding-right 8em
 
 
+	.authenticationError
+		color: $brand-danger
+		font-weight: bold
+		background-color: $background-color
+		border-radius: 20px
+		padding: 2em
+		text-align: center
+		font-size: 2em
+
+
 .error
 	text-align: center
 	color: $brand-danger
