--- a/packages/Quality/widgets/Jira/Jira.styl
+++ b/packages/Quality/widgets/Jira/Jira.styl
@@ -1,5 +1,5 @@
 .html
-	overflow auto
+	//overflow auto
 
 .content
 	font-size 1em
@@ -78,7 +78,7 @@
 
 
 .major
-	background-color #ff848a//Red
+	background-color $red
 	border-width 1px
 	margin 1em
 	padding 0.5em
@@ -86,14 +86,14 @@
 
 
 .second
-	background-color #a3ffc4//Green
+	background-color $green
 	border-width 1px
 	margin 1em
 	padding 0.5em
 	
 
 .undefined
-	background-color #a3c6ff//Blue
+	background-color $blue
 	border-width 1px
 	margin 1em
 	padding 0.5em
@@ -102,10 +102,11 @@
 .IssuesList
 	margin-top 1em
 	border-style solid
-	color #000000
+	color $gray
 	font-size 0.85em
 	overflow auto
 	max-height 6em
+	overflow: auto
 
 	
 .id
