--- a/themes/default/variables.styl
+++ b/themes/default/variables.styl
@@ -30,6 +30,16 @@ $gray-lighter-plus = lighten($gray-base, 70%);
 //$brand-success = #1C842F // green
 //$brand-warning = #f6c342 // yellow
 //$brand-danger = #d04437 // red
+
+//Personal colors 
+$green = #a3ffc4;
+$green-dark =#17d15b ;
+
+$red = #ff848a ;
+$red-dark = #d11720;
+
+$blue =#a3c6ff;
+$blue-dark = #0f5bd8;
 //
 //$error-color = $brand-danger
 //$success-color = $brand-success
