--- a/packages/Quality/widgets/Squash/Squash.styl
+++ b/packages/Quality/widgets/Squash/Squash.styl
@@ -1,10 +1,52 @@
 .content
 	font-size 1em
 	color $gray-light
+	overflow auto
+	max-height 22em	
 
 	.name
 		font-size:1.5em
 		font-weight: bold
+		padding: 0.5em
 	
-	.CampaignTable
-		color: red
+.CampaignTable
+	border-style: solid
+	width : 100%
+	background-color: $background-color
+	text-align: center
+	color black
+
+	.header
+		background-color: $green
+		padding-right: 1em
+		padding-left: 1em
+		border-style: solid
+		text-align: center
+		color: black
+
+	.it
+		background-color: #FEFEFE
+		max-width: 2em
+	.todo
+		background-color: #C2D7EB
+		padding-right: 0.5em
+	.IP
+		background-color: #7894E6
+	.S
+		background-color: #9FCA20
+	.F
+		background-color: #C52200
+	.B
+		background-color: #FDCD1B
+	.nt
+		background-color: #959595
+	.pt
+		background-color: #FEFEFE
+	.a
+		background-color: #FFFFFF
+		.tr
+			border-style: solid
+			text-align: center
+
+.longTitle
+	max-width: 11em
